# oj-server

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .todocheck.yaml  CLAUDE.md  GEMINI.md  README.md  TODO.md  TODO.txt  cliff.toml  config.yaml  install.py  install.py.old  install_kubernetes.py  install_map_server.py  install_modular.py  kubernetes_installer.py  pyproject.toml  requirements.txt  setup_modular.py
.junie/: guidelines.md
actions/: ufw_setup_actions.py  website_setup_actions.py
bootstrap/: README.md  __init__.py  mb_apt.py  mb_build_tools.py  mb_lsb.py  mb_pydantic.py  mb_util_linux.py  orchestrator.py
bootstrap_installer/: bootstrap_process.py  bs_apt.py  bs_build_tools.py  bs_lsb.py  bs_orchestrator.py  bs_prereqs.py  bs_pydantic.py  bs_util_linux.py  bs_utils.py
bs_installer/: bs_build_tools.py  bs_lsb.py  bs_orchestrator.py  bs_pydantic.py  bs_utils.py
common/: command_utils.py  constants.yaml  constants_loader.py  core_utils.py  db_utils.py  file_utils.py  json_utils.py  logging_config.py  metrics.py  network_utils.py  orchestrator.py  pgpass_utils.py  processor_interface.py  system_utils.py
common/debian/: apt_manager.py
config_files/: pg_tileserv.yaml
configure/: apache_configurator.py  carto_configurator.py  certbot_configurator.py  gtfs_automation_configurator.py  nginx_configurator.py  osrm_configurator.py  pg_tileserv_configurator.py  postgres_configurator.py  renderd_configurator.py  ufw_configurator.py
data_processor/: Dockerfile  run.py
dataproc/: data_processing.py  gtfs_processor_runner.py  osrm_data_processor.py  raster_processor.py
docker/ci-builders/: docs-builder.Dockerfile  python-builder.Dockerfile
docker/ci-builds/: docs-builder.Dockerfile  python-builder.Dockerfile
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPERS.md  PLUGIN_ARCHITECTURE.md  Plugins.md  TODO.md  Web_UI_Improvements.md  centralised_logging.md  constants_implementation.md  currentissue.md  kubernetes.md  kubernetes_migration_plan.md  merge.md  orchestrator.md  plan.md  postgis_thoughts.md  precommit_info.md  tasks.md
docs/plans/: refactor_apt_management.md
docs/strategies/: RealTimeStrategy.md  Static_Strategy.md
gtfs_processor/: load.py  main_pipeline.py  schema_definitions.py  transform.py  update_gtfs.py  utils.py  validate.py
install_kubernetes/: __init__.py  common.py  kubernetes_tools.py  plugin_interface.py  plugin_manager.py  tools.py
install_kubernetes/builders/: amd64.py  rpi64.py
installer/: __init__.py  apache_installer.py  base_component.py  base_configurator.py  base_installer.py  carto_installer.py  certbot_installer.py  cli_handler.py  config_loader.py  config_models.py  docker_installer.py  main_installer.py  nginx_installer.py  nodejs_installer.py  orchestrator.py  osrm_installer.py  pg_tileserv_installer.py  pgadmin_installer.py  pgagent_installer.py  postgres_installer.py  registry.py  renderd_installer.py  state_manager.py  step_executor.py  ufw_installer.py
installer/actions/: __init__.py  website_setup_actions.py
installer/components/: README.md  __init__.py
installer/installer_app/: app.py  cli.py
installer/legacy_installers/: __init__.py  docker_installer.py  nodejs_installer.py  pg_tileserv_installer.py  sample_component.py
installer/ui/: tui_application.py  tui_constants.py  tui_widgets.py
kubernetes/: README.md
kubernetes/base/: kustomization.yaml  namespace.yaml
logs/: blank.txt
modular/: __init__.py  base_component.py  base_installer.py  orchestrator.py  registry.py  registry2.py
modular/installers/: apache_installer.py  carto_installer.py  certbot_installer.py  docker_installer.py  nginx_installer.py  nodejs_installer.py  osrm_installer.py  pg_tileserv_installer.py  pgadmin_installer.py  pgagent_installer.py  postgres_installer.py  prerequisites_installer.py  sample_component.py  ufw_installer.py
modular_bootstrap/: __init__.py  mb_apt.py  mb_bootstrap.py  mb_build_tools.py  mb_lsb.py  mb_pydantic.py  mb_util_linux.py  mb_utils.py  orchestrator.py
modular_setup/: __init__.py  base_configurator.py  orchestrator.py  registry.py
modular_setup/configurators/: __init__.py  apache_configurator.py  certbot_configurator.py  pg_tileserv_configurator.py  postgres_configurator.py
plugins/: README.md  __init__.py
plugins/Private/: __init__.py
plugins/Public/: __init__.py
processors/data_handling/: data_processing.py  osrm_data_processor.py  raster_processor.py
processors/gtfs/: automation.py  db_setup.py  download.py  environment.py  load.py  main_pipeline.py  orchestrator.py  pipeline_definitions.py  runner.py  schema_definitions.py  transform.py  update_gtfs.py  utils.py  validate.py
setup/: apache_installer.py  carto_installer.py  cli_handler.py  command_utils.py  config.py  config_loader.py  config_models.py  core_prerequisites.py  core_setup.py  data_processing.py  db_utils.py  gtfs_environment_setup.py  helpers.py  main.py  main_installer.py  osrm_data_processor.py  pg_tileserv_installer.py  postgres_installer.py  renderd_installer.py  services_setup.py  state_manager.py  step_executor.py  tui.py  ufw_setup_actions.py  ui.py
setup/actions/: __init__.py  website_setup_actions.py
setup/configure/: apache_configurator.py  carto_configurator.py  certbot_configurator.py  nginx_configurator.py  osrm_configurator.py  pg_tileserv_configurator.py  postgres_configurator.py  renderd_configurator.py  ufw_configurator.py
setup/core/: __init__.py
setup/services/: apache.py  (+11 more)
tests/: conftest.py  test_app_settings.py  test_apt_manager.py  test_centralized_logging.py  test_cli.py  test_config_loader.py  test_example.py  test_install.py  test_install_boot_verbosity.py  test_install_help.py  test_install_kubernetes.py  test_metrics_implementation.py  test_osrm_data_processor.py  test_osrm_port_mapping.py  test_plugin_architecture.py  test_plugin_dependencies.py  test_plugin_migration.py  test_processor_interface.py  test_simple_utility.py  test_sudo_issue.py  test_sudo_solution.py  test_system_utils.py
ui/: tui.py  tui_application.py  tui_constants.py  tui_logging.py  tui_widgets.py
(+360 files in other folders)
