[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "osm_osrm_server"
version = "0.7.4"
description = "An Open Street Map and Open Source Routing Machine"
readme = "README.md"
authors = [
    { name = "Peter Lawler", email = "osmosrmserver@opentasmania.net" },
]
maintainers = [
    { name = "Peter Lawler", email = "osmosrmserver@opentasmania.net" },
]
license = "LGPL-3.0-or-later"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

keywords = ["osm", "osrm", "gtfs", "gis", "map server", "routing", "postgis", "postgresql"]

requires-python = ">=3.13,<4.0"

dependencies = [
    "Cython>=3,<4",
    "requests>=2.32.4,<3.0.0",
    "pandas>=2.3.0,<3.0.0",
    'psycopg[c]>=3.2.9,<4',
    "gtfs-kit>=10.3.1,<11.0.0",
    "pydantic>=2.9.1,<3.0.0",
    "pydantic-settings>=2.9.1,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "PyYAML>=6.0.0,<7.0.0",
    # "yafc @ git+https://gitlab.com/opentasmania/yafconfigurator.git@3.0.4",
    "urwid>=3.0.0,<4.0.0",
    # System dependencies (not installable via pip):
    # - python3-apt: Required for AptManager
]

[project.urls]
Homepage = "https://opentasmania.net"
Repository = "https://gitlab.com/opentasmania/osm-osrm-server"

[project.scripts]
install-map-server = "osm_osrm_server.install_map_server:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    "coverage>=7.0,<8.0",
    "git-cliff>=2.0.0,<3.0.0",
    "mypy>=1.0,<2.0",
    "pandas-stubs>=2.0.0,<3.0.0",
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
    "pytest-mock>=3.0,<4.0",
    "pytest-subprocess>=1.0,<2.0",
    "types-requests>=2.25.0,<3.0.0",
    "types-PyYAML>=6.0.0,<7.0.0",
]
test = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
    "pytest-mock>=3.0,<4.0",
    "pytest-subprocess>=1.0,<2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["osm_osrm_server*"]
exclude = ["tests*"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
exclude = ['\.git', '\.venv', 'build', 'dist']

[tool.pytest.ini_options]
addopts = """
        --cov-report term-missing
        --cov-report html:cover/coverage_html
        --cov-report json:cover/coverage.json
        --cov-report xml:cover/coverage.xml
        """

[tool.coverage.report]
show_missing = true
omit = ["/etc/python3.13/sitecustomize.py", ]

[tool.coverage.xml]
output = "coverage.xml"

[tool.ruff]
line-length = 78
preview = true

[tool.ruff.lint]
select = [
    "E1", # Indentation
    "E2", # Whitespace
    "E3", # Blank lines
    "E4", # Import formatting
    "E5", # Line length
    "E7", # Statement, imports, expression formatting
    "E9", # Syntax errors
    "F", # PyFlakes
    "B", # Bugbear
    "I"  # isort rules
]

ignore = [
    "E501"  # Line length will be handled by ruff format
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]  # Ignore import not at top of file
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
quote-style = "double"
