[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oj_server"
version = "0.9.0"
description = "Open Journey Server"
readme = "README.md"
authors = [
    { name = "Peter Lawler", email = "ojserver@opentasmania.net" },
]
maintainers = [
    { name = "Peter Lawler", email = "ojserver@opentasmania.net" },
]
license = "LGPL-3.0-or-later"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

keywords = ["oj", "ojs", "gtfs", "gis", "map server", "routing", "postgis", "postgresql"]

requires-python = ">=3.13,<4.0"

dependencies = [
    "certifi==2025.7.14",
    "cython~=3.1.2",
    "flask>=3.1.1,<4.0.0",
    "folium>0.19.0,<1.0.0",
    "numpy>2.3.0,<3.0.0",
    "pandas>2.2.0,<3.0.0",
    'psycopg[c]>=3.2.9,<4',
    "pydantic~=2.11.7",
    "pydantic-settings>2.9.1,<3.0.0",
    "python-dotenv>=1.1.1,<2.0.0",
    "PyYAML>6.0.0,<7.0.0",
    "requests>2.32.0,<3.0.0",
    "urwid>3.0.0,<4.0.0",
]

[project.urls]
Homepage = "https://opentasmania.net"
Repository = "https://gitlab.com/opentasmania/oj-server"

[project.scripts]
install-map-server = "oj_server.install_map_server:main"

[project.optional-dependencies]
dev = [
    "click>=8.2.1",
    "ruff>0.1.0",
    "pre-commit>3.0.0",
    "coverage>6.9,<8.0",
    "git-cliff>1.9,<3.0.0",
    "mypy>0.99,<2.0",
    "pandas-stubs>=2.0.0,<3.0.0",
    "pip>24,<26",
    "pre-commit>4.1.0,<5.0.0",
    "pytest>7.0,<9.0",
    "pytest-cov>=6.0,<7",
    "pytest-mock>2.0,<4.0",
    "pytest-subprocess>0,<2.0",
    "types-requests>2,<3.0.0",
    "types-PyYAML>5,<7.0.0",
    "vulture>=0.12.0.0,<3.0.0",
]
test = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=6.0,<7",
    "pytest-mock>=3.0,<4.0",
    "pytest-subprocess>=1.0,<2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["oj_server*"]
exclude = ["tests*"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
exclude = ['\.git', '\.venv', 'build', 'dist', 'plugins']

[tool.pytest.ini_options]
addopts = """
        --cov-report term-missing
        --cov-report html:cover/coverage_html
        --cov-report json:cover/coverage.json
        --cov-report xml:cover/coverage.xml
        """
norecursedirs = ["tests/setup/configure", "tests/installer"]

[tool.coverage.report]
show_missing = true
omit = ["/etc/python3.13/sitecustomize.py", ]

[tool.coverage.xml]
output = "coverage.xml"

[tool.ruff]
line-length = 78
preview = true

[tool.ruff.lint]
select = [
    "E1", # Indentation
    "E2", # Whitespace
    "E3", # Blank lines
    "E4", # Import formatting
    "E5", # Line length
    "E7", # Statement, imports, expression formatting
    "E9", # Syntax errors
    "F", # PyFlakes
    "B", # Bugbear
    "I"  # isort rules
]

ignore = [
    "E501"  # Line length will be handled by ruff format
]

[tool.ruff.lint.per-file-ignores]
"install.py" = ["E402"] # Ignore import not at top of file for bootstrapping venv
"__init__.py" = ["E402"]  # Ignore import not at top of file
"**/{tests,docs,tools}/*" = ["E402"]
"**/plugins/*" = ["ALL"]

[tool.ruff.format]
quote-style = "double"

[tool.vulture]
# exclude = ["*file*.py", "dir/"]
ignore_decorators = ["@app.route", "@require_*"]
# ignore_names = ["visit_*", "do_*"]
make_whitelist = true
min_confidence = 80
# paths = ["myscript.py", "mydir", "whitelist.py"]
exclude = [
    "*/tests/*",
    ".venv/*",
]
sort_by_size = true
# verbose = true
